--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -10,3 +10,12 @@ body {
     color-scheme: dark;
   }
 }
+/* app/tailwind.css */
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
